[package]
name = "buddy_system_allocator"
description = "A bare metal allocator that uses buddy system."
documentation = "https://docs.rs/buddy_system_allocator"
homepage = "https://github.com/rcore-os/buddy_system_allocator"
repository = "https://github.com/rcore-os/buddy_system_allocator"
keywords = ["allocator", "no_std", "heap"]
version = "0.8.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>", "Vinay Chandra Dommeti <github@vinay.vc>"]
edition = "2018"
license = "MIT"

[features]
default = ["use_spin"]
use_spin = ["spin"]
const_fn = []

[dependencies.spin]
version = "0.7"
optional = true
