[package]
name = "buddy_system_allocator"
description = "A bare metal allocator that uses buddy system."
documentation = "https://docs.rs/buddy_system_allocator"
homepage = "https://github.com/rcore-os/buddy_system_allocator"
repository = "https://github.com/rcore-os/buddy_system_allocator"
keywords = ["allocator", "no_std", "heap"]
version = "0.9.0"
authors = ["Jiajie Chen <c@jia.je>", "Vinay Chandra Dommeti <github@vinay.vc>", "Andrew Walbran <qwandor@google.com>"]
edition = "2021"
license = "MIT"

[features]
default = ["use_spin"]
use_spin = ["spin"]
const_fn = []

[dependencies.spin]
version = "0.9.3"
optional = true

[dev-dependencies]
criterion = "0.3"
ctor = "0.1.23"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "memory_allocator_benchmark"
harness = false
