[package]
name = "buddy_system_allocator"
description = "A bare metal allocator that uses buddy system."
documentation = "https://docs.rs/buddy_system_allocator"
homepage = "https://github.com/rcore-os/buddy_system_allocator"
repository = "https://github.com/rcore-os/buddy_system_allocator"
keywords = ["allocator", "no_std", "heap"]
version = "0.9.1"
authors = [
  "Jiajie Chen <c@jia.je>",
  "Vinay Chandra Dommeti <github@vinay.vc>",
  "Andrew Walbran <qwandor@google.com>",
]
edition = "2021"
license = "MIT"

[features]
default = ["alloc", "use_spin"]
alloc = []
const_fn = []
use_spin = ["spin"]

[dependencies.spin]
version = "0.9.8"
optional = true

[dev-dependencies]
criterion = "0.5.1"
ctor = "0.2.6"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "memory_allocator_benchmark"
harness = false
